DP-12724 fix helptip mobile tray z-index (#474)
* set index

* add changelog

--- a/assets/scss/03-organisms/_help-tip.scss
+++ b/assets/scss/03-organisms/_help-tip.scss
@@ -185,7 +185,7 @@ $border-width: 1px;
       bottom: 0;
       left: 0;
       right: 0;
-      z-index: 1; // to create a new stacking context on top
+      z-index: 10; // to create a new stacking context on top, stack below mobile site header (z-index: 90)
       margin-top: .5rem;
       &--c-primary {
         background-color: $c-primary-lightest;
